--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy app to https://www.tjsboutiquehotel.co.ke on push to main
+name: 🚀 Deploy app to https://www.venturesafricasafaris.com on push to main
 
 on:
   push:
