--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=VentureAfrica
 APP_ENV=local
 APP_KEY=base64:9DNrP34aU9zfhiXxlSfzl0plYUMDw0zQTFGW7MkQLhE=
 APP_DEBUG=true
-APP_URL=http://Mpesa.test
+APP_URL=http://ventureafricasafaris.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mpesa
+DB_DATABASE=venture_africa
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -48,7 +48,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# 
+#
 # MPESA_ENV=sandbox
 MPESA_ENV=0
 MPESA_CONSUMER_KEY=wsOEm4vhEsrkVxAAlfgRRfcWyvzNH60O
