refactor: configure tailwind

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "cSpell.words": ["Eldoret", "Kapsoya", "pinterest", "tiktok"]
+    "cSpell.words": [
+        "Eldoret",
+        "Kapsoya",
+        "laravel",
+        "pinterest",
+        "tailwindcss",
+        "tiktok"
+    ]
 }
