--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "npm run development",
+        "devp": "npm run development",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "vite build",
+        "dev": "vite"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^1.7.7",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.11.3",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.6.0"
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.4.14",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.4",
+        "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.47",
+        "vite": "^5.0"
     }
 }
