--- a/package.json
+++ b/package.json
@@ -14,21 +14,26 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.4",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.11.3",
+        "concurrently": "^9.0.1",
+        "flowbite": "^2.5.2",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^1.0",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
+        "postcss": "^8.4.47",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.4.14",
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.5.9",
+        "alpinejs": "^3.14.3"
     }
 }
