refactor: remove redundant files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "flowbite",
         "Kapsoya",
         "laravel",
+        "mpesa",
         "pinterest",
         "tailwindcss",
         "tiktok"
