fix: fix the contact us page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "flowbite",
         "Kapsoya",
         "laravel",
+        "Livewire",
         "mpesa",
         "pinterest",
         "tailwindcss",
