feat: get started with edenfield media

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=VentureAfrica
 APP_ENV=local
 APP_KEY=base64:9DNrP34aU9zfhiXxlSfzl0plYUMDw0zQTFGW7MkQLhE=
 APP_DEBUG=true
-APP_URL=http://ventureafricasafaris.test
+APP_URL=http://edenfieldmedia.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
