--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:9DNrP34aU9zfhiXxlSfzl0plYUMDw0zQTFGW7MkQLhE=
 APP_DEBUG=true
-APP_URL=https://ventureafricasafaris.com
+APP_URL=https://edenfieldmedia.co.ke
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
